--- a/styles/_leftBox.scss
+++ b/styles/_leftBox.scss
@@ -1,91 +1,218 @@
+// https://codepen.io/sosuke/pen/Pjoqqp
+// Hex color to filter converter
+// filter is set to "aliceblue"
+// filter: invert(33%) sepia(65%) saturate(7500%) hue-rotate(334deg) brightness(101%) contrast(98%);
+
 @import "./presets";
 #leftBox {
-    height: 100vh;
-    width: $leftWidth;
-    left: 0;
-    display: inline-flex;
-    position: fixed;
-    background-color: #121414;
-    margin-right: 0;
-    #linksWrapper {
-        #links {
-            height: 25vh;
-            width: $leftWidth;
-            background-color: black;
-            padding-top: 2vh;
-            #logo {
-                aspect-ratio: 1/1.25;
-                width: 10vh;
-                margin-left: 4.85vh;
-                background-image: url(/images/logo.svg);
-                background-repeat: no-repeat;
-                // https://codepen.io/sosuke/pen/Pjoqqp
-                // Hex color to filter converter
-                // filter is set to "aliceblue"
-                filter: invert(99%) sepia(12%) saturate(245%) hue-rotate(309deg) brightness(96%) contrast(89%);
-                @include flexCenter();
-                z-index: 1;
-            }
-            #logoShadow {
-                aspect-ratio: 1/1.25;
-                width: 10vh;
-                margin-left: 5.15vh;
-                margin-top: -12.75vh;
-                background-image: url(/images/logo.svg);
-                background-repeat: no-repeat;
-                // https://codepen.io/sosuke/pen/Pjoqqp
-                // Hex color to filter converter
-                // filter is set to "aliceblue"
-                filter: invert(33%) sepia(65%) saturate(7500%) hue-rotate(334deg) brightness(101%) contrast(98%);
-                @include flexCenter();
-                z-index: 1;
-            }
-            h6 {
-                @include flexCenter();
-                margin-top: 5%;
-                margin-bottom: 5%;
-                font-size: 20px;
-                color: $lightFont;
-            }
-            h5 {
-                @include flexCenter();
-                margin-top: 0;
-                margin-bottom: 0;
-                color: $lightFont;
-            }
-            .title {
-                // outline: 2px solid blue;
-                @include flexCenter();
-                .titleWrapper {
-                    // outline: 1px solid white;
-                    height: 20px;
-                    overflow: hidden;
-                    .titleItem {
-                        line-height: 1vh;
-                        @include flexCenter;
-                    }
-                }
-            }
-        }
-    }
+	flex-direction: column;
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: flex;
+	height: 100vh;
+	width: $leftWidth;
+	display: inline-block;
+	position: fixed;
+	background-color: #121414;
+	margin-right: 0;
+	#linksWrapper {
+		height: 84%;
+		width: $leftWidth;
+		outline: 1px solid red;
+		#links {
+			height: 150px;
+			width: $leftWidth;
+			background-color: black;
+			padding-top: 2vh;
+			#logo {
+				padding-bottom: 10px;
+				height: 40px;
+				width: 120px;
+				background-image: url(/images/KMLogo.svg);
+				background-repeat: no-repeat;
+				margin: auto;
+				z-index: 1;
+			}
+			h6 {
+				@include flexCenter();
+				margin-top: 10px;
+				margin-bottom: 10px;
+				font-size: 20px;
+				color: $lightFont;
+				padding-bottom: 10px;
+			}
+			.title {
+				// outline: 2px solid blue;
+				@include flexCenter();
+				.titleWrapper {
+					// outline: 1px solid white;
+					height: 20px;
+					overflow: hidden;
+					.titleItem {
+						line-height: 10px;
+						@include flexCenter;
+					}
+				}
+			}
+		}
+	}
+	.navSection {
+		flex-direction: column;
+		display: -webkit-box;
+		display: -ms-flexbox;
+		display: flex;
+		position: fixed;
+		top: 35%;
+		width: $leftWidth;
+		.aboutMe {
+			@include flexCenter;
+			@include Font-Minor;
+			@include Style-Minor;
+			@include leftFontMargin;
+			@include leftNavStyle;
+			border-top: $SecBorder;
+		}
+		.skills {
+			@include flexCenter;
+			@include Font-Minor;
+			@include Style-Minor;
+			@include leftNavStyle;
+		}
+		.myWork {
+			@include flexCenter;
+			@include Font-Minor;
+			@include Style-Minor;
+			@include leftNavStyle;
+		}
+		.contact {
+			@include flexCenter;
+			@include Font-Minor;
+			@include Style-Minor;
+			@include leftNavStyle;
+		}
+		.inspiration {
+			@include flexCenter;
+			@include Font-Minor;
+			@include Style-Minor;
+			@include leftNavStyle;
+		}
+		.playground {
+			@include flexCenter;
+			@include Font-Minor;
+			@include Style-Minor;
+			@include leftNavStyle;
+		}
+		.aboutMe:hover {
+			color: rgb(241, 224, 176);
+			transition: $trans;
+		}
+		.skills:hover {
+			color: rgb(241, 224, 176);
+			transition: $trans;
+		}
+		.myWork:hover {
+			color: rgb(241, 224, 176);
+			transition: $trans;
+		}
+		.contact:hover {
+			color: rgb(241, 224, 176);
+			transition: $trans;
+		}
+		.inspiration:hover {
+			color: rgb(241, 224, 176);
+			transition: $trans;
+		}
+		.playground:hover {
+			color: rgb(241, 224, 176);
+			transition: $trans;
+		}
+		.ul-box {
+			flex-direction: column;
+			display: -webkit-box;
+			display: -ms-flexbox;
+			display: flex;
+			outline: 1px solid blue;
+			width: $leftWidth;
+			margin-top: 145px;
+			bottom: 100px;
+			margin-bottom: 10vw;
+			.socials {
+				@include flexCenter;
+				padding-right: 0px;
+				padding-left: 0px;
+				list-style: none;
+				.linkedin {
+					padding-right: 10px;
+					padding-left: 10px;
+					.linkedinSVG {
+						width: 1.5rem;
+						fill: #808080;
+						transition: $trans;
+					}
+					.linkedinSVG:hover {
+						fill: rgb(241, 224, 176);
+						transition: $trans;
+					}
+				}
+				.github {
+					padding-right: 10px;
+					padding-left: 10px;
+					.githubSVG {
+						width: 1.5rem;
+						fill: #808080;
+						transition: $trans;
+					}
+					.githubSVG:hover {
+						fill: rgb(241, 224, 176);
+						transition: $trans;
+					}
+				}
+			}
+		}
+	}
+}
+.current-page {
+	color: rgb(241, 224, 176) !important;
 }
 
+// controls the slide animations for
+// the titles under name in the leftBox
 .slider {
-    color: $darkFont;
-    font-size: 20px;
-    text-align: center;
-    animation: slider 30s linear infinite;
+	color: $darkFont;
+	font-size: 20px;
+	text-align: center;
+	animation: slider 10s linear infinite;
 }
 
-@keyframes slider{
-    0%{ margin-top: -19px }
-    10%{ margin-top: -19px }
-    16%{ margin-top: -42px }
-    35%{ margin-top: -42px }
-    41%{ margin-top: -65px }
-    60%{ margin-top: -65px }
-    66%{ margin-top: -88px }
-    85%{ margin-top: -88px }
-    91%{ margin-top: -111px }
-    100%{ margin-top: -111px }
+@keyframes slider {
+	0% {
+		margin-top: -19px;
+	}
+	10% {
+		margin-top: -19px;
+	}
+	16% {
+		margin-top: -42px;
+	}
+	35% {
+		margin-top: -42px;
+	}
+	41% {
+		margin-top: -65px;
+	}
+	60% {
+		margin-top: -65px;
+	}
+	66% {
+		margin-top: -88px;
+	}
+	85% {
+		margin-top: -88px;
+	}
+	91% {
+		margin-top: -111px;
+	}
+	100% {
+		margin-top: -111px;
+	}
 }
