Updated pages for Portfolio
window is scaling correctly, added rotating image cube for space fill. Replace animal images with coding skills with onhover text of my skill levels.

--- a/TEMP_DELETE/style copy.css
+++ b/TEMP_DELETE/style copy.css
@@ -987,7 +987,7 @@ template {
 	-webkit-animation-name: ajs-flipInY;
 	animation-name: ajs-flipInY;
 }
-/* .alertify.ajs-flipy.ajs-out.ajs-hidden .ajs-dialog {
+.alertify.ajs-flipy.ajs-out.ajs-hidden .ajs-dialog {
 	-webkit-animation-name: ajs-flipOutY;
 	animation-name: ajs-flipOutY;
 }
@@ -2005,7 +2005,7 @@ Copyright (c) 2015 Daniel Eden
 		transform: none;
 	}
 }
-*/ .wobble {
+.wobble {
 	-webkit-animation-name: wobble;
 	animation-name: wobble;
 }
