--- a/TEMP_DELETE/playground.css
+++ b/TEMP_DELETE/playground.css
@@ -15,6 +15,41 @@ body {
 	overflow-x: hidden; */
 }
 
+/* .logo {
+	padding-bottom: 10px;
+	height: 40px;
+	width: 120px;
+	background-image: url(/images/KMLogo.svg);
+	background-repeat: no-repeat;
+	margin: auto;
+	z-index: 1;
+} */
+/* .trapezium {
+	width: 10rem;
+	background-color: #1d1d1d;
+	position: fixed;
+	left: 0;
+	top: 0;
+	right: auto;
+	bottom: 0;
+	display: flex;
+	z-index: 2;
+	-ms-flex-direction: column;
+	flex-direction: column;
+	-webkit-box-pack: justify;
+	-ms-flex-pack: justify;
+	justify-content: space-between;
+	-webkit-box-align: center;
+	-ms-flex-align: center;
+	align-items: center;
+	margin: 0;
+	padding: 0;
+	border-bottom: 100vh solid #181818;
+	border-left: 10rem solid transparent;
+	border-right: 0px solid transparent;
+	transform: rotate(180deg);
+} */
+
 .main-menu {
 	width: 13rem;
 	background-color: #181818;
@@ -41,30 +76,13 @@ body {
 	margin: 0;
 	padding: 0;
 }
-.main-menu__top {
-	background: #000000;
-	width: 100%;
-	display: -webkit-box;
-	display: -ms-flexbox;
-	display: flex;
-	-webkit-box-orient: vertical;
-	-webkit-box-direction: normal;
-	-ms-flex-direction: column;
-	flex-direction: column;
-	-webkit-box-align: center;
-	-ms-flex-align: center;
-	align-items: center;
-	-webkit-box-pack: center;
-	-ms-flex-pack: center;
-	justify-content: center;
-	padding: 2rem 0;
-}
-.main-menu__top > span {
+
+/* .main-menu__top > span {
 	font-family: "Open Sans";
 	color: #a5a5a5;
 	font-size: 1.2rem;
 	margin-top: 1rem;
-}
+} */
 .logo {
 	display: -webkit-box;
 	display: -ms-flexbox;
@@ -80,10 +98,18 @@ body {
 	-ms-flex-align: center;
 	align-items: center;
 }
-.logo svg {
+.logo div {
 	width: 6rem;
 	height: auto;
+	padding-bottom: 10px;
+	height: 40px;
+	width: 120px;
+	background-image: url(/images/KMLogo.svg);
+	background-repeat: no-repeat;
+	margin: auto;
+	z-index: 1;
 }
+
 .logo span {
 	font-family: font-file-82132;
 	color: #fff;
@@ -161,4 +187,44 @@ body {
 }
 .mbtn {
 	display: none;
+}
+
+.slider {
+	color: #978b90;
+	font-size: 20px;
+	text-align: center;
+	animation: slider 10s linear infinite;
+}
+
+@keyframes slider {
+	0% {
+		margin-top: -19px;
+	}
+	10% {
+		margin-top: -19px;
+	}
+	16% {
+		margin-top: -42px;
+	}
+	35% {
+		margin-top: -42px;
+	}
+	41% {
+		margin-top: -65px;
+	}
+	60% {
+		margin-top: -65px;
+	}
+	66% {
+		margin-top: -88px;
+	}
+	85% {
+		margin-top: -88px;
+	}
+	91% {
+		margin-top: -111px;
+	}
+	100% {
+		margin-top: -111px;
+	}
 }
