--- a/styles/play.scss
+++ b/styles/play.scss
@@ -1,8 +1,3 @@
-// https://codepen.io/sosuke/pen/Pjoqqp
-// Hex color to filter converter
-// filter is set to "aliceblue"
-// filter: invert(33%) sepia(65%) saturate(7500%) hue-rotate(334deg) brightness(101%) contrast(98%);
-
 @import "./_presets";
 @import "./centerBox";
 
@@ -50,6 +45,7 @@ body {
 	padding: 0;
 	.linksWrapper {
 		background: #000000;
+		height: 200px;
 		width: 100%;
 		display: -webkit-box;
 		display: -ms-flexbox;
@@ -64,8 +60,13 @@ body {
 		-webkit-box-pack: center;
 		-ms-flex-pack: center;
 		justify-content: center;
-		padding: 2rem 0;
-		user-select: none;
+		padding: 2rem 0rem;
+		.linksWrapper > span {
+			font-family: "Open Sans";
+			color: #a5a5a5;
+			font-size: 1.2rem;
+			margin-top: 1rem;
+		}
 		.logo {
 			display: -webkit-box;
 			display: -ms-flexbox;
@@ -93,8 +94,8 @@ body {
 			z-index: 1;
 		}
 		.logo span {
-			font-family: font-file-82131;
-			color: aliceblue;
+			font-family: font-file-82132;
+			color: #fff;
 			margin-top: 1px;
 			font-size: 2.7rem;
 		}
@@ -177,7 +178,6 @@ body {
 	align-items: center;
 	width: 100%;
 	margin-top: 10px;
-	user-select: none;
 	.titleWrapper {
 		height: 20px;
 		width: 100;
@@ -201,51 +201,51 @@ body {
 
 @keyframes slider {
 	0% {
-		margin-top: -20px;
+		margin-top: -38px;
 	}
 	7% {
-		margin-top: -20px;
+		margin-top: -38px;
 	}
 	11% {
-		margin-top: -47px;
+		margin-top: -65px;
 	}
 	21% {
-		margin-top: -47px;
+		margin-top: -65px;
 	}
 	25% {
-		margin-top: -74px;
+		margin-top: -92px;
 	}
 	36% {
-		margin-top: -74px;
+		margin-top: -92px;
 	}
 	40% {
-		margin-top: -101px;
+		margin-top: -119px;
 	}
 	50% {
-		margin-top: -101px;
+		margin-top: -119px;
 	}
 	55% {
-		margin-top: -128px;
+		margin-top: -146px;
 	}
 	65% {
-		margin-top: -128px;
+		margin-top: -146px;
 	}
 	69% {
-		margin-top: -155px;
+		margin-top: -173px;
 	}
 	79% {
-		margin-top: -155px;
+		margin-top: -173px;
 	}
 	83% {
-		margin-top: -182px;
+		margin-top: -200px;
 	}
 	93% {
-		margin-top: -182px;
+		margin-top: -200px;
 	}
 	97% {
-		margin-top: -209px;
+		margin-top: -227px;
 	}
 	100% {
-		margin-top: -209px;
+		margin-top: -227px;
 	}
 }
