--- a/styles/_leftBox.scss
+++ b/styles/_leftBox.scss
@@ -50,6 +50,7 @@ body {
 	padding: 0;
 	.linksWrapper {
 		background: #000000;
+		height: 180px;
 		width: 100%;
 		display: -webkit-box;
 		display: -ms-flexbox;
