--- a/styles/index-master.scss
+++ b/styles/index-master.scss
@@ -16,6 +16,8 @@ body {
 // styleing
 @import "./leftBox";
 @import "./centerBox";
+@import "./tokens";
+@import "./background";
 @import "./rightBox";
 p {
 	margin-top: 0;
