MyWork / Insp scaling pages 90% func
centerBox is now divided into equal parts (n) by (n) currently set to 3 x nth. center image logo of project scales 1/1 ratio with min of 5vh/vw ratio.

--- a/styles/_presets.scss
+++ b/styles/_presets.scss
@@ -4,7 +4,7 @@ $leftWidth: 17rem;
 $totalWidth: calc(100% - $leftWidth);
 $centerWidth: calc($totalWidth / 2);
 $rightWidth: calc($totalWidth / 2);
-$myWorkHeight: 100vh;
+$myWorkHeight: 975px;
 $myWorkWidth: calc(100% - $leftWidth);
 $lightFont: aliceblue;
 $darkFont: #978b90;
