--- a/styles/myWork.scss
+++ b/styles/myWork.scss
@@ -1,84 +1,90 @@
 @import "./presets";
 
+$gridGap: 3px;
 #centerBox {
-	height: $myWorkHeight;
+	height: 100%;
 	width: $myWorkWidth;
 	left: calc($leftWidth + 1px);
-	display: inline-flex;
-	position: fixed;
-	margin-top: 1px;
-	@include flexCenter;
-	outline: 1px solid yellow;
+	display: grid;
+	grid-template-columns: none;
+	// grid-template-columns: repeat(3, 33.333333%);
+	grid-gap: $gridGap;
+	// outline: 1px solid blue;
+	margin: 0 auto 5vh;
+	padding: 0;
 }
-
 .child {
 	height: calc($myWorkHeight / 3);
 	width: calc(1745px / 5);
 	min-height: calc($myWorkHeight / 5);
 	min-width: calc(1745px / 5);
-	// background-color: red;
-	outline: 1px solid blue;
+	background-color: red;
+	// outline: 1px solid blue;
 	@include flexCenter;
 	position: absolute;
 }
+img {
+	max-height: 10vh;
+	max-width: 10vw;
+	min-height: 5vh;
+	min-width: 5vw;
+	aspect-ratio: 1/1;
+}
 
-.child:nth-child(1) {
-	top: 0;
-	left: 0;
+@mixin child {
+	height: 100%;
+	width: 100%;
+	min-height: 50%;
+	min-width: 50%;
+	background-color: rgba(131, 124, 124, 0.2);
+	justify-content: center;
+	align-items: center;
+	position: relative;
+	display: flex;
 }
-.child:nth-child(2) {
-	top: 0;
-	left: calc(1740px / 5) + 1px;
+
+#child:nth-child(1) {
+	@include child;
 }
-.child:nth-child(3) {
-	top: 0;
-	left: calc((1740px / 5) * 2) + 2px;
+#child:nth-child(2) {
+	@include child;
 }
-.child:nth-child(4) {
-	top: 0;
-	left: calc((1740px / 5) * 3) + 3px;
+#child:nth-child(3) {
+	@include child;
 }
-.child:nth-child(5) {
-	top: 0;
-	left: calc((1740px / 5) * 4) + 4px;
+#child:nth-child(4) {
+	@include child;
 }
-.child:nth-child(6) {
-	top: calc(966px / 3);
-	left: 0;
+#child:nth-child(5) {
+	@include child;
 }
-.child:nth-child(7) {
-	top: calc(966px / 3);
-	left: calc(1740px / 5) + 1px;
+#child:nth-child(6) {
+	@include child;
 }
-.child:nth-child(8) {
-	top: calc(966px / 3);
-	left: calc((1740px / 5) * 2) + 2px;
+#child:nth-child(7) {
+	@include child;
 }
-.child:nth-child(9) {
-	top: calc(966px / 3);
-	left: calc((1740px / 5) * 3) + 3px;
+#child:nth-child(8) {
+	@include child;
 }
-.child:nth-child(10) {
-	top: calc(966px / 3);
-	left: calc((1740px / 5) * 4) + 4px;
+#child:nth-child(9) {
+	@include child;
 }
-.child:nth-child(11) {
-	top: calc((966px / 3) * 2);
-	left: 0;
+#child:nth-child(10) {
+	@include child;
 }
-.child:nth-child(12) {
-	top: calc((966px / 3) * 2);
-	left: calc(1740px / 5) + 1px;
+#child:nth-child(11) {
+	@include child;
 }
-.child:nth-child(13) {
-	top: calc((966px / 3) * 2);
-	left: calc((1740px / 5) * 2) + 2px;
+#child:nth-child(12) {
+	@include child;
 }
-.child:nth-child(14) {
-	top: calc((966px / 3) * 2);
-	left: calc((1740px / 5) * 3) + 3px;
+#child:nth-child(13) {
+	@include child;
 }
-.child:nth-child(15) {
-	top: calc((966px / 3) * 2);
-	left: calc((1740px / 5) * 4) + 4px;
+#child:nth-child(14) {
+	@include child;
+}
+#child:nth-child(15) {
+	@include child;
 }
