--- a/styles/myWork.css
+++ b/styles/myWork.css
@@ -1,210 +1,57 @@
-#centerBox {
-  height: 100%;
-  width: calc(100% - 17rem);
-  left: calc(17rem + 1px);
-  display: grid;
-  grid-template-columns: none;
-  grid-gap: 3px;
-  margin: 0 auto 5vh;
+* {
+  margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
-.child {
-  height: 325px;
-  width: 349px;
-  min-height: 195px;
-  min-width: 349px;
-  background-color: red;
+html {
+  box-sizing: content-box;
+  overflow-y: visible !important;
+  /* -ms-overflow-style: -ms-autohiding-scrollbar; is to hide edge inner scrollbar*/
+  -ms-overflow-style: -ms-autohiding-scrollbar;
+  /* scrollbar-width: none; is to hide firefox inner scrollbar */
+  scrollbar-width: none;
+}
+
+body {
+  /* scrollbar-width: none; is to hide firefox inner scrollbar */
+  scrollbar-width: none;
+}
+
+::-webkit-scrollbar {
+  width: 0px;
+}
+
+::-webkit-scrollbar-thumb {
+  display: none;
+}
+
+.grid {
+  display: block;
+  padding-right: 16px;
+  padding-left: 56px;
+  padding-top: 16px;
+  padding-bottom: 16px;
+  display: grid;
+  grid-gap: 16px;
+}
+
+.grid .child {
+  background-color: rgba(128, 65, 211, 0.192);
+  padding: 60px;
   display: flex;
   justify-content: center;
   align-items: center;
-  position: absolute;
 }
 
 img {
+  display: block;
   max-height: 10vh;
   max-width: 10vw;
   min-height: 5vh;
   min-width: 5vw;
   aspect-ratio: 1/1;
-}
-
-#child:nth-child(1) {
-  height: 100%;
-  width: 100%;
-  min-height: 50%;
-  min-width: 50%;
-  background-color: rgba(131, 124, 124, 0.2);
+  display: flex;
   justify-content: center;
   align-items: center;
-  position: relative;
-  display: flex;
-}
-
-#child:nth-child(2) {
-  height: 100%;
-  width: 100%;
-  min-height: 50%;
-  min-width: 50%;
-  background-color: rgba(131, 124, 124, 0.2);
-  justify-content: center;
-  align-items: center;
-  position: relative;
-  display: flex;
-}
-
-#child:nth-child(3) {
-  height: 100%;
-  width: 100%;
-  min-height: 50%;
-  min-width: 50%;
-  background-color: rgba(131, 124, 124, 0.2);
-  justify-content: center;
-  align-items: center;
-  position: relative;
-  display: flex;
-}
-
-#child:nth-child(4) {
-  height: 100%;
-  width: 100%;
-  min-height: 50%;
-  min-width: 50%;
-  background-color: rgba(131, 124, 124, 0.2);
-  justify-content: center;
-  align-items: center;
-  position: relative;
-  display: flex;
-}
-
-#child:nth-child(5) {
-  height: 100%;
-  width: 100%;
-  min-height: 50%;
-  min-width: 50%;
-  background-color: rgba(131, 124, 124, 0.2);
-  justify-content: center;
-  align-items: center;
-  position: relative;
-  display: flex;
-}
-
-#child:nth-child(6) {
-  height: 100%;
-  width: 100%;
-  min-height: 50%;
-  min-width: 50%;
-  background-color: rgba(131, 124, 124, 0.2);
-  justify-content: center;
-  align-items: center;
-  position: relative;
-  display: flex;
-}
-
-#child:nth-child(7) {
-  height: 100%;
-  width: 100%;
-  min-height: 50%;
-  min-width: 50%;
-  background-color: rgba(131, 124, 124, 0.2);
-  justify-content: center;
-  align-items: center;
-  position: relative;
-  display: flex;
-}
-
-#child:nth-child(8) {
-  height: 100%;
-  width: 100%;
-  min-height: 50%;
-  min-width: 50%;
-  background-color: rgba(131, 124, 124, 0.2);
-  justify-content: center;
-  align-items: center;
-  position: relative;
-  display: flex;
-}
-
-#child:nth-child(9) {
-  height: 100%;
-  width: 100%;
-  min-height: 50%;
-  min-width: 50%;
-  background-color: rgba(131, 124, 124, 0.2);
-  justify-content: center;
-  align-items: center;
-  position: relative;
-  display: flex;
-}
-
-#child:nth-child(10) {
-  height: 100%;
-  width: 100%;
-  min-height: 50%;
-  min-width: 50%;
-  background-color: rgba(131, 124, 124, 0.2);
-  justify-content: center;
-  align-items: center;
-  position: relative;
-  display: flex;
-}
-
-#child:nth-child(11) {
-  height: 100%;
-  width: 100%;
-  min-height: 50%;
-  min-width: 50%;
-  background-color: rgba(131, 124, 124, 0.2);
-  justify-content: center;
-  align-items: center;
-  position: relative;
-  display: flex;
-}
-
-#child:nth-child(12) {
-  height: 100%;
-  width: 100%;
-  min-height: 50%;
-  min-width: 50%;
-  background-color: rgba(131, 124, 124, 0.2);
-  justify-content: center;
-  align-items: center;
-  position: relative;
-  display: flex;
-}
-
-#child:nth-child(13) {
-  height: 100%;
-  width: 100%;
-  min-height: 50%;
-  min-width: 50%;
-  background-color: rgba(131, 124, 124, 0.2);
-  justify-content: center;
-  align-items: center;
-  position: relative;
-  display: flex;
-}
-
-#child:nth-child(14) {
-  height: 100%;
-  width: 100%;
-  min-height: 50%;
-  min-width: 50%;
-  background-color: rgba(131, 124, 124, 0.2);
-  justify-content: center;
-  align-items: center;
-  position: relative;
-  display: flex;
-}
-
-#child:nth-child(15) {
-  height: 100%;
-  width: 100%;
-  min-height: 50%;
-  min-width: 50%;
-  background-color: rgba(131, 124, 124, 0.2);
-  justify-content: center;
-  align-items: center;
-  position: relative;
-  display: flex;
-}/*# sourceMappingURL=myWork.css.map */
+} /*# sourceMappingURL=myWork.css.map *//*# sourceMappingURL=myWork.css.map */
