--- a/styles/myWork.scss
+++ b/styles/myWork.scss
@@ -1,90 +1,72 @@
 @import "./presets";
 
-$gridGap: 3px;
-#centerBox {
-	height: 100%;
-	width: $myWorkWidth;
-	left: calc($leftWidth + 1px);
-	display: grid;
-	grid-template-columns: none;
-	// grid-template-columns: repeat(3, 33.333333%);
-	grid-gap: $gridGap;
-	// outline: 1px solid blue;
-	margin: 0 auto 5vh;
+* {
+	margin: 0;
 	padding: 0;
+	box-sizing: border-box;
 }
-.child {
-	height: calc($myWorkHeight / 3);
-	width: calc(1745px / 5);
-	min-height: calc($myWorkHeight / 5);
-	min-width: calc(1745px / 5);
-	background-color: red;
-	// outline: 1px solid blue;
+
+html {
+	box-sizing: content-box;
+	overflow-y: visible !important;
+	/* -ms-overflow-style: -ms-autohiding-scrollbar; is to hide edge inner scrollbar*/
+	-ms-overflow-style: -ms-autohiding-scrollbar;
+	/* scrollbar-width: none; is to hide firefox inner scrollbar */
+	scrollbar-width: none;
+}
+
+body {
+	/* scrollbar-width: none; is to hide firefox inner scrollbar */
+	scrollbar-width: none;
+}
+
+::-webkit-scrollbar {
+	width: 0px;
+}
+
+::-webkit-scrollbar-thumb {
+	display: none;
+}
+
+.grid {
+	display: block;
+	padding-right: 16px;
+	padding-left: 56px;
+	padding-top: 16px;
+	padding-bottom: 16px;
+	display: grid;
+	grid-gap: 16px;
+}
+
+// @media (min-width: 768px) {
+// 	.grid {
+// 		grid-template-columns: repeat(2, 1fr);
+// 	}
+// }
+// @media (min-width: 960px) {
+// 	.grid {
+// 		grid-template-columns: repeat(3, 1fr);
+// 	}
+// }
+// @media (min-width: 1200px) {
+// 	.grid {
+// 		grid-template-columns: repeat(4, 1fr);
+// 	}
+// }
+.grid .child {
+	background-color: rgba(128, 65, 211, 0.192);
+	padding: 60px;
 	@include flexCenter;
-	position: absolute;
 }
+
 img {
+	display: block;
 	max-height: 10vh;
 	max-width: 10vw;
 	min-height: 5vh;
 	min-width: 5vw;
 	aspect-ratio: 1/1;
-}
-
-@mixin child {
-	height: 100%;
-	width: 100%;
-	min-height: 50%;
-	min-width: 50%;
-	background-color: rgba(131, 124, 124, 0.2);
+	display: flex;
 	justify-content: center;
 	align-items: center;
-	position: relative;
-	display: flex;
-}
-
-#child:nth-child(1) {
-	@include child;
-}
-#child:nth-child(2) {
-	@include child;
-}
-#child:nth-child(3) {
-	@include child;
-}
-#child:nth-child(4) {
-	@include child;
-}
-#child:nth-child(5) {
-	@include child;
-}
-#child:nth-child(6) {
-	@include child;
-}
-#child:nth-child(7) {
-	@include child;
-}
-#child:nth-child(8) {
-	@include child;
-}
-#child:nth-child(9) {
-	@include child;
-}
-#child:nth-child(10) {
-	@include child;
-}
-#child:nth-child(11) {
-	@include child;
-}
-#child:nth-child(12) {
-	@include child;
-}
-#child:nth-child(13) {
-	@include child;
-}
-#child:nth-child(14) {
-	@include child;
-}
-#child:nth-child(15) {
-	@include child;
-}
+} /*# sourceMappingURL=myWork.css.map */
